# Restructured

./: .env.example  .flake8  .gitignore  AUDIT_AND_PROFESSIONAL_IMPROVEMENT_PLAN.md  CHANGELOG.md  GUIA_RED_BYBIT.md  README.md  SUGERENCIAS_MEJORA.md  analyze_all.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
NerT_AI_PRO/: bot_state_bridge.py  data_analyzer.py  intelligence_catalog.py  main.py  mcp_bridge.py  qwen_desktop.py  react_agent.py  src_bridge.py  tool_registry.py
config/: settings.py
data/: trading.db
docs/: index.html
nertz_cpp/: setup_toolchain.ps1
nertz_engine/: __init__.py  cli.py  storage.py
scripts/: analyze_trading_data.py  benchmark_qwen.py  git-push-release.sh  monitor_trade_ready.py  patch_nertzh_optimize.py  path_safety.py  release_duckdb_lock.ps1  repair_results_balance.py  stop_bot.ps1  url_safety.py  validate_system.py
src/: Nertzh.py  bybit_v5.py  optimizer.py  settings.py  signal_engine.py  utils.py
src_dev/: RESUMEN.md  __init__.py  _analyze_sweep.py  _merge_mcp_parts.py  _quick_gate_check.py  _quick_live_probes.py  _scan_panel_now.py  _tpsl_quick.py  _tpsl_quick2.py  config.py  lab_policy.py  old_results.json  run_bybit_mcp_validate.py  run_bybit_mcp_validate_batch.py  run_exchange_motor_compare.py  run_full_system_sweep.py  run_live_exchange_verify.py  run_monitor_session.py  run_order_lab.py  run_realtime.py  run_signal_analysis.py  run_signal_lab.py  run_tpsl_panel_verify.py  run_validate.py
tests/: test_dev_signal_lab.py  test_signal_engine.py  test_system.py  validate_demo_bybit.py
(+61 files in other folders)
